docker3-2/lab3-2-1/ruby-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ruby-app
  template:
    metadata:
      labels:
        app: ruby-app
    spec:
      containers:
      - name: ruby-app
        image: ruby-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4567
        readinessProbe:
          exec:
            command: ["ruby", "-e", "require 'mysql2'; client = Mysql2::Client.new(host: ENV['MYSQL_HOST'], username: ENV['MYSQL_USER'], password: ENV['MYSQL_PASSWORD'], database: ENV['MYSQL_DATABASE']); client.ping"]
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 4567
          initialDelaySeconds: 10
          periodSeconds: 5
