docker3-2/lab3-2-1/ruby-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruby-app-service
spec:
  type: LoadBalancer
  selector:
    app: ruby-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4567
